alertmanager-endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: alertmanager-endpoints
  namespace: thanos
subsets:
  - addresses:
    - ip: 192.168.10.22
    - ip: 192.168.10.23
    - ip: 192.168.10.24
    ports:
      - port: 30011
        name: alertmanager
---
apiVersion: v1
kind: Service
metadata:
  name: alertmanager-endpoints
  namespace: thanos
spec:
  ports:
  - port: 30011
    name: alertmanager
    targetPort: 30011
