thanos-compact.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: thanos-compact
  name: thanos-compact
  namespace: thanos
spec:
  ports:
  - name: http
    port: 10902
    targetPort: http
  selector:
    app: thanos-compact
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: thanos-compact
  namespace: thanos
  labels:
    app: thanos-compact
spec:
  replicas: 2
  selector:
    matchLabels:
      app: thanos-compact
  serviceName: thanos-compact
  podManagementPolicy: Parallel
  template:
    metadata:
      labels:
        app: thanos-compact
    spec:
      containers:
      - name: thanos-compact
        args:
        - compact
        - --wait
        - --objstore.config-file=/etc/thanos/storage.yaml
        - --data-dir=/data
        - --debug.accept-malformed-index
        - --log.level=debug
        - --retention.resolution-raw=7d
        - --retention.resolution-5m=15d
        - --retention.resolution-1h=30d
        image: harbor.com/prometheus/thanos:v0.26.0
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "4Gi"
            cpu: "2" 
          requests:
            memory: "128Mi"
            cpu: "100m" 
        ports:
        - containerPort: 10902
          name: http
        readinessProbe:
          failureThreshold: 20
          httpGet:
            path: /-/ready
            port: http
            scheme: HTTP
          periodSeconds: 5
        livenessProbe:
          failureThreshold: 4
          httpGet:
            path: /-/healthy
            port: http
            scheme: HTTP
          periodSeconds: 30
        terminationMessagePolicy: FallbackToLogsOnError
        volumeMounts:
        - name: thanos-storage-config
          subPath: storage.yaml
          mountPath: /etc/thanos/storage.yaml
      terminationGracePeriodSeconds: 120
      volumes:
      - name: thanos-storage-config
        secret:
          secretName: thanos-objectstorage
