thanos-rule.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: thanos-rule
  name: thanos-rule
  namespace: thanos
spec:
  clusterIP: None
  ports:
  - name: grpc
    port: 10901
    targetPort: grpc
  - name: http
    port: 10902
    targetPort: http
  selector:
    app: thanos-rule
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: thanos-rule
  name: thanos-rule
  namespace: thanos
spec:
  replicas: 2
  selector:
    matchLabels:
      app: thanos-rule
  serviceName: thanos-rule
  podManagementPolicy: Parallel
  template:
    metadata:
      labels:
        app: thanos-rule
    spec:
      containers:
      - name: thanos-rule
        args:
        - rule
        - --grpc-address=0.0.0.0:10901
        - --http-address=0.0.0.0:10902
        - --rule-file=/etc/thanos/rule/*.yaml
        - --data-dir=/data/thanos/rule
        - --label=rule_replica="$(NAME)"
        - --alert.label-drop=rule_replica
        - --query=dnssrv+_http._tcp.thanos-query.thanos.svc.cluster.local
        - --alertmanagers.url=http://alertmanager-endpoints:30011
        image: harbor.com/prometheus/thanos:v0.26.0
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "4Gi"
            cpu: "2" 
          requests:
            memory: "128Mi"
            cpu: "100m" 
        readinessProbe:
          failureThreshold: 18
          httpGet:
            path: /-/ready
            port: http
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 5
        livenessProbe:
          failureThreshold: 24
          httpGet:
            path: /-/healthy
            port: http
            scheme: HTTP
          periodSeconds: 5
        ports:
        - containerPort: 10901
          name: grpc
        - containerPort: 10902
          name: http
        terminationMessagePolicy: FallbackToLogsOnError
        volumeMounts:
        - name: prometheus-rule
          mountPath: /etc/thanos/rule
      volumes:
      - name: prometheus-rule
        configMap:
          name: prometheus-rule
