thanos-store.yaml
apiVersion: v1
kind: Service
metadata:
  name: thanos-store
  namespace: thanos
  labels:
    app: thanos-store
spec:
  clusterIP: None
  ports:
  - name: grpc
    port: 10901
    targetPort: grpc
  - name: http
    port: 10902
    targetPort: http
  selector:
    app: thanos-store
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: thanos-store
  namespace: thanos
  labels:
    app: thanos-store
spec:
  replicas: 2
  selector:
    matchLabels:
      app: thanos-store
  serviceName: thanos-store
  podManagementPolicy: Parallel
  template:
    metadata:
      labels:
        app: thanos-store
    spec:
      containers:
      - name: thanos-store
        args:
        - store
        - --log.level=debug
        - --data-dir=/data/thanos/store
        - --grpc-address=0.0.0.0:10901
        - --http-address=0.0.0.0:10902
        - --objstore.config-file=/etc/thanos/storage.yaml
        image: harbor.com/prometheus/thanos:v0.30.2
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "8Gi"
            cpu: "4" 
          requests:
            memory: "128Mi"
            cpu: "100m" 
        ports:
        - containerPort: 10901
          name: grpc
        - containerPort: 10902
          name: http
        readinessProbe:
          failureThreshold: 20
          httpGet:
            path: /-/ready
            port: http
            scheme: HTTP
          periodSeconds: 5
        livenessProbe:
          failureThreshold: 8
          httpGet:
            path: /-/healthy
            port: http
            scheme: HTTP
          periodSeconds: 30
        terminationMessagePolicy: FallbackToLogsOnError
        volumeMounts:
        - name: thanos-storage-config
          subPath: storage.yaml
          mountPath: /etc/thanos/storage.yaml
      volumes:
      - name: thanos-storage-config
        secret:
          secretName: thanos-objectstorage
      securityContext:
        runAsUser: 0
        runAsGroup: 0
        fsGroup: 0
