thanos-compact-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: thanos-compact-tls
  namespace: thanos
spec:
  routes:
    - match: Host(`thanos-compact.com`)
      kind: Rule
      services:
        - name: thanos-compact
          port: 10902
  tls:
    secretName: thanos-compact-tls
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: thanos-compact
  namespace: thanos
spec:
  routes:
    - match: Host(`thanos-compact.com`)
      kind: Rule
      services:
        - name: thanos-compact
          port: 10902
