thanos-rule-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: thanos-rule-tls
  namespace: thanos
spec:
  routes:
    - match: Host(`thanos-rule.com`)
      kind: Rule
      services:
        - name: thanos-rule
          port: 10902
  tls:
    secretName: thanos-rule-tls
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: thanos-rule
  namespace: thanos
spec:
  routes:
    - match: Host(`thanos-rule.com`)
      kind: Rule
      services:
        - name: thanos-rule
          port: 10902
