thanos-store-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: thanos-store-tls
  namespace: thanos
spec:
  routes:
    - match: Host(`thanos-store.com`)
      kind: Rule
      services:
        - name: thanos-store
          port: 10902
  tls:
    secretName: thanos-store-tls
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: thanos-store
  namespace: thanos
spec:
  routes:
    - match: Host(`thanos-store.com`)
      kind: Rule
      services:
        - name: thanos-store
          port: 10902
